playbooks/argocd/applications/workloads/battlemap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: battlemap
  namespace: battlemap
spec:
  selector:
    app: battlemap
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: api
      port: 8080
      targetPort: api
