playbooks/argocd/applications/workloads/battlemap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: battlemap
  namespace: battlemap
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - battlemap.soyspray.vip
      secretName: prod-cert-tls
  rules:
    - host: battlemap.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: battlemap
                port:
                  number: 80
